Fix bug where align-items prefixes were not added
This bug only occurred if the value for the align-items mixin was
flex-start or flex-end.

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -23,6 +23,9 @@
   } @else if $alignment == flex-end {
     -webkit-box-align: end;
     -ms-flex-align: end;
+  } @else {
+    -webkit-box-align: $alignment;
+    -ms-flex-align: $alignment;
   }
   align-items: $alignment;
 }
